# like-collector

./: Cargo.toml
data/: postman.json  tables.sql
src/: main.rs
src/api/: auth.rs  mod.rs  routes.rs  types.rs
src/api/errors/: errors.rs
src/database/: db.rs  types.rs
